test(visita): simplify imports and update assertions in controller and service tests